items alignment fix

--- a/Redux/Redux-WebApp/source/style/Login.sass
+++ b/Redux/Redux-WebApp/source/style/Login.sass
@@ -10,3 +10,5 @@
         align-items: center
         justify-content: center
         border: 1px solid black
+        h2
+            text-align: center
